[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tmsg"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "binghao", email = "ngbinghao@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "torch",
  "torchvision",
  "lightning[extra]"
]

[project.scripts]
train = "tmsg.main:train"

[project.urls]
Documentation = "https://github.com/unknown/training-multiple-models-on-a-single-gpu#readme"
Issues = "https://github.com/unknown/training-multiple-models-on-a-single-gpu/issues"
Source = "https://github.com/unknown/training-multiple-models-on-a-single-gpu"

[tool.hatch.build.targets.wheel]
packages = ["src/tmsg"]

[tool.hatch.version]
path = "src/tmsg/__about__.py"

# Default dev environment
[tool.hatch.envs.default]
path = ".venv"
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
train = "python src/tmsg/main.py"
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

# UAT environment to test installation of package
[tool.hatch.envs.uat]
detached = true
path = ".uat"
dependencies = []

[tool.hatch.envs.uat.scripts]
install = "pip install ./dist/training_multiple_models_on_a_single_gpu-0.0.1-py3-none-any.whl"

# Experiment environmnent to run docker containers
[tool.hatch.envs.expt]
path = ".expt"
detached = true
dependencies = [
  "docker",
  "jupyterlab",
  "matplotlib",
  "seaborn",
  "pandas"
]

[tool.hatch.envs.expt.scripts]
build = "/bin/bash ./build_train_docker.sh"

[[tool.hatch.envs.all.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/training_multiple_models_on_a_single_gpu tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py37"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py37"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["training_multiple_models_on_a_single_gpu"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["training_multiple_models_on_a_single_gpu", "tests"]
branch = true
parallel = true
omit = [
  "src/training_multiple_models_on_a_single_gpu/__about__.py",
]

[tool.coverage.paths]
training_multiple_models_on_a_single_gpu = ["src/training_multiple_models_on_a_single_gpu", "*/training-multiple-models-on-a-single-gpu/src/training_multiple_models_on_a_single_gpu"]
tests = ["tests", "*/training-multiple-models-on-a-single-gpu/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
